--- a/public/app.html
+++ b/public/app.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scientists who's who</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="orange-helvetica.min.css" rel="stylesheet">
@@ -27,20 +28,20 @@
     <content>
       <div class="container-fluid">
         <div class="row d-flex justify-content-center">
-          <div class="col-6 my-5">
-            <div class="input-group mb-3">
+          <div class="col-lg-6 col-md-8 col-sm-10 col-12 my-lg-4 my-md-3 my-sm-3 my-2">
+            <div class="input-group">
               <input id="search" type="text" class="form-control" placeholder="user name, mail or id" aria-label="user name, mail or id">
               <button id="get" class="btn btn-primary text-bg-primary p-3" type="button">Get user</button>
             </div>
           </div>
         </div>
         <div class="row d-flex justify-content-center">
-          <div class="col-8 my-5">
+          <div class="col-lg-6 col-md-8 col-sm-10 col-12 my-lg-4 my-md-3 my-sm-3 my-2">
             <div id="content"></div>
           </div>
         </div>
         <div class="row d-flex justify-content-center text-center">
-          <div class="col-6 my-5">
+          <div class="col-lg-6 col-md-8 col-sm-10 col-12 my-lg-4 my-md-3 my-sm-3 my-2">
             <h1>
               <div id="error" style="color:red"></div>
             </h1>
